--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\vaidhe\AppData\Local\Temp\testng-eclipse-855813119\testng-customsuite.xml</span>
+                    <span>C:\Users\vaidhe\AppData\Local\Temp\testng-eclipse--52289804\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="streamsLearning.streamIntroduction" class="method navigator-link" hash-for-method="regular">regular</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SeleniumLearning.testNGIntroduction" class="method navigator-link" hash-for-method="Demo">Demo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="streamsLearning.streamIntroduction" class="method navigator-link" hash-for-method="streamFilter">streamFilter</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SeleniumLearning.testNGIntroduction" class="method navigator-link" hash-for-method="DemoTwo">DemoTwo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">streamsLearning.streamIntroduction</span>
+              <span class="class-name">SeleniumLearning.testNGIntroduction</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="regular">
-                  </a> <!-- regular -->
-                  <span class="method-name">regular</span>
+                  <a name="Demo">
+                  </a> <!-- Demo -->
+                  <span class="method-name">Demo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="streamFilter">
-                  </a> <!-- streamFilter -->
-                  <span class="method-name">streamFilter</span>
+                  <a name="DemoTwo">
+                  </a> <!-- DemoTwo -->
+                  <span class="method-name">DemoTwo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\vaidhe\AppData\Local\Temp\testng-eclipse-855813119\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vaidhe\AppData\Local\Temp\testng-eclipse--52289804\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;streamsLearning.streamIntroduction&quot;/&gt;
+      &lt;class name=&quot;SeleniumLearning.testNGIntroduction&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,18 +199,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'regular')
-data.setCell(0, 2, 'streamsLearning.streamIntroduction')
-data.setCell(0, 3, 23);
+data.setCell(0, 1, 'Demo')
+data.setCell(0, 2, 'SeleniumLearning.testNGIntroduction')
+data.setCell(0, 3, 20);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'streamFilter')
-data.setCell(1, 2, 'streamsLearning.streamIntroduction')
-data.setCell(1, 3, 7);
+data.setCell(1, 1, 'DemoTwo')
+data.setCell(1, 2, 'SeleniumLearning.testNGIntroduction')
+data.setCell(1, 3, 4);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 ms</span>
+              <span class="suite-total-time">Total running time: 24 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,14 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">streamsLearning.streamIntroduction</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">SeleniumLearning.testNGIntroduction</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">regular</span>
+                <span class="method-name">Demo</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">streamFilter</span>
-                <span class="method-start">30 ms</span>
+                <span class="method-name">DemoTwo</span>
+                <span class="method-start">32 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
